--- a/index.html
+++ b/index.html
@@ -11,12 +11,41 @@
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <div class="row">
+                <div class="col-md-2 logo">
+                    <img class="img-fluid" src="images/logo.jpg" alt="">
+                </div>
+                <div class="col-md-10 banner clearfix">
+                    <div id="demo" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <h3>March intake</h3>
+                                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, facere!</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h3>School of medicine</h3>
+                                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, facere!</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h3>Other Stuff</h3>
+                                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, facere!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <hr>
+        <!--header -->
 
+        <!-- container -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
 
 </body>
 
