--- a/index.html
+++ b/index.html
@@ -70,7 +70,61 @@
             </div>
         </nav>
         <!-- nav -->
+        <hr>
 
+        <div class="row">
+            <div class="col-md-6">
+                <div id="demo" class="carousel slide" data-ride="carousel">
+                    <ul class="carousel-indicators">
+                        <li data-target="#demo" data-slide-to="0" class="active"></li>
+                        <li data-target="#demo" data-slide-to="1"></li>
+                        <li data-target="#demo" data-slide-to="2"></li>
+                        <li data-target="#demo" data-slide-to="3"></li>
+                    </ul>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="img-fluid" src="images/image1.jpg" alt="">
+                            <p class="carousel-caption lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, aliquam! Adipisci enim est veniam
+                                maiores unde esse, eveniet, inventore nisi, nihil optio beatae quae minima. Quo nobis ipsam
+                                impedit? Inventore!</p>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="images/image2.jpg" alt="">
+                            <p class="carousel-caption lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, aliquam! Adipisci enim est veniam
+                                maiores unde esse, eveniet, inventore nisi, nihil optio beatae quae minima. Quo nobis ipsam
+                                impedit? Inventore!</p>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="images/image3.jpg" alt="">
+                            <p class="carousel-caption lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, aliquam! Adipisci enim est veniam
+                                maiores unde esse, eveniet, inventore nisi, nihil optio beatae quae minima. Quo nobis ipsam
+                                impedit? Inventore!</p>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="images/image4.jpg" alt="">
+                            <p class="carousel-caption lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, aliquam! Adipisci enim est veniam
+                                maiores unde esse, eveniet, inventore nisi, nihil optio beatae quae minima. Quo nobis ipsam
+                                impedit? Inventore!</p>
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#demo" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+
+                </div>
+            </div>
+            <!-- carousel -->
+            <div class="col-md-6">
+                <h2 class="jumbotron">Welcome to AUCA</h2>
+                <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas id sed consequatur consectetur animi laudantium
+                    nesciunt aut incidunt expedita inventore tempore, unde sit earum officia. Fugit alias nostrum nam rerum?</p>
+            </div>
+        </div>
         <!-- container -->
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
