--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-md-2 logo">
                     <img class="img-fluid" src="images/logo.jpg" alt="">
                 </div>
-                <div class="col-md-10 banner clearfix">
+                <div class="col-md-10 banner">
                     <div id="demo" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -125,12 +125,72 @@
                     nesciunt aut incidunt expedita inventore tempore, unde sit earum officia. Fugit alias nostrum nam rerum?</p>
             </div>
         </div>
-        <!-- container -->
+        <hr>
+        <h2 class="text-center">Our Faculties</h2>
+        <br>
+        <div class="row">
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-            crossorigin="anonymous"></script>
+            <div class="col-md-3 col-sm-2">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Information Technology</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-2">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Business Administration</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-2">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Education</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-2">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h3 class=" text-center">Health Sciences</h3>
+                    </div>
+                    <div class="card-body">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus architecto rem sit sequi
+                            qui?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+
+    </div>
+    <!-- faculties -->
+
+    </div>
+    <!-- container -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
 </body>
 
