--- a/index.html
+++ b/index.html
@@ -197,6 +197,38 @@
             </div>
         </div>
         <hr>
+
+        <footer class="bg-dark text-center text-light">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>lorem ipsum</h3>
+                    <p>
+                        <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, repudiandae delectus rem tempora
+                            numquam magnam ipsum labore expedita facere vitae!</small>
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h3>lorem ipsum</h3>
+                    <p>
+                        <small>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum quos consequuntur repudiandae voluptatem
+                            tenetur ipsa fuga, quis dignissimos impedit. Neque.
+                        </small>
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="">Contact Us</h3>
+                    <p>
+                        <span class="fa fa-envelope-square"></span> Email: auca.ac.rw@gmail.com</p>
+                    <p>
+                        <span class="fa fa-phone"></span> Phone: +250 - 788 - 333 - 456</p>
+                    <p>
+                        <span class="fa fa-mailbox"></span> PO Box 2461, Kigali Rwanda</p>
+                </div>
+            </div>
+            <div class="copyright text-center bg-dark">
+                <p>&copy;Copyright auca 2020</p>
+            </div>
+        </footer>
     </div>
     <!-- container -->
 
