--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <hr>
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div id="demo" class="carousel slide" data-ride="carousel">
                     <ul class="carousel-indicators">
                         <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <!-- carousel -->
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <h2 class="jumbotron">Welcome to AUCA</h2>
                 <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas id sed consequatur consectetur animi laudantium
                     nesciunt aut incidunt expedita inventore tempore, unde sit earum officia. Fugit alias nostrum nam rerum?</p>
@@ -132,7 +132,7 @@
         <br>
         <div class="row">
 
-            <div class="col-md-3 col-sm-2">
+            <div class=" col-lg-3 col-md-6">
                 <div class="card">
                     <div class="card-header bg-light">
                         <h3 class=" text-center">Information Technology</h3>
@@ -144,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-2">
+            <div class=" col-lg-3 col-md-6">
                 <div class="card">
                     <div class="card-header bg-light">
                         <h3 class=" text-center">Business Administration</h3>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-2">
+            <div class=" col-lg-3 col-md-6">
                 <div class="card">
                     <div class="card-header bg-light">
                         <h3 class=" text-center">Education</h3>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-2">
+            <div class=" col-lg-3 col-md-6">
                 <div class="card">
                     <div class="card-header bg-light">
                         <h3 class=" text-center">Health Sciences</h3>
@@ -185,12 +185,12 @@
         <h2 class="text-center">Video Section</h2>
         <br>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                 </div>
@@ -200,22 +200,14 @@
 
         <footer class="bg-dark text-center text-light">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <h3>lorem ipsum</h3>
                     <p>
                         <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, repudiandae delectus rem tempora
                             numquam magnam ipsum labore expedita facere vitae!</small>
                     </p>
                 </div>
-                <div class="col-md-4">
-                    <h3>lorem ipsum</h3>
-                    <p>
-                        <small>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum quos consequuntur repudiandae voluptatem
-                            tenetur ipsa fuga, quis dignissimos impedit. Neque.
-                        </small>
-                    </p>
-                </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <h3 class="">Contact Us</h3>
                     <p>
                         <span class="fa fa-envelope-square"></span> Email: auca.ac.rw@gmail.com</p>
@@ -224,6 +216,15 @@
                     <p>
                         <span class="fa fa-mailbox"></span> PO Box 2461, Kigali Rwanda</p>
                 </div>
+                <div class="col-lg-4">
+                    <h3>lorem ipsum</h3>
+                    <p>
+                        <small>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum quos consequuntur repudiandae voluptatem
+                            tenetur ipsa fuga, quis dignissimos impedit. Neque.
+                        </small>
+                    </p>
+                </div>
+
             </div>
             <div class="copyright text-center bg-dark">
                 <p>&copy;Copyright auca 2020</p>
