--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>AUCA</title>
 </head>
@@ -43,7 +44,7 @@
         <!--header -->
 
 
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-md navbar-fixed-top">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -51,10 +52,10 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Academics</a>
@@ -67,6 +68,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Admission</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="article.html">Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="category.html">Category</a>
                     </li>
                 </ul>
             </div>
@@ -121,8 +128,8 @@
                 </div>
             </div>
             <!-- carousel -->
-            <div class="col-lg-6">
-                <h2 class="jumbotron">Welcome to AUCA</h2>
+            <div class="col-lg-6 jumbotron">
+                <h2 class="text-center">Welcome to AUCA</h2>
                 <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas id sed consequatur consectetur animi laudantium
                     nesciunt aut incidunt expedita inventore tempore, unde sit earum officia. Fugit alias nostrum nam rerum?</p>
             </div>
@@ -187,18 +194,18 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                    <iframe class="embed-responsive-item" src=""></iframe>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                    <iframe class="embed-responsive-item" src=""></iframe>
                 </div>
             </div>
         </div>
         <hr>
 
-        <footer class="bg-dark text-center text-light">
+        <footer class="text-center text-light">
             <div class="row">
                 <div class="col-lg-4">
                     <h3>lorem ipsum</h3>
@@ -232,11 +239,12 @@
         </footer>
     </div>
     <!-- container -->
-
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
